<resources>
    <string name="app_name">Shaboo</string>
    <string name="partygame">SHABOO</string>
    <string name="start_new_game">Start New Game</string>
    <string name="topics">Topics</string>
    <string name="settings">Settings</string>
    <string name="create_topic_title">Create Topic!</string>
    <string name="add_entry">Add Entry!</string>
    <string name="new_topic_hint">"Russian Composers"</string>
    <string name="new_entry_hint">For Russian composers, you might put: "Tchaikovsky" or "Rachmaninoff; Tchaikovsky;" (Separate multiple entries with a semicolon)</string>
    <string name="create_topic">Create Your Own!</string>
    <string name="shaboo_logo">Shaboo logo</string>

</resources>