<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <!-- REPLACE WITH IMAGE VIEW AND GAME LOGO LATER -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        app:srcCompat="@mipmap/shaboo" />

    <!--
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="3"
        android:fontFamily="@font/fascinate"
        android:text="@string/partygame"
        android:textSize="100sp"
        android:textColor="#17C3B2"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/newGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_new_game"
            android:background="@color/blue"
            android:textColor="@color/cream"/>

        <Button
            android:id="@+id/createTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_topic"
            android:background="@color/mustard"
            android:textColor="@color/cream"/>

        <Button
            android:id="@+id/gotoTopicMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:background="@color/red"
            android:textColor="@color/cream"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

</LinearLayout>